[gd_scene load_steps=10 format=2]

[ext_resource path="res://interface/ui_elements/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/ui_elements/SelectedSpellIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/OnScreenUI.gd" type="Script" id=3]
[ext_resource path="res://interface/theme/Interface.theme" type="Theme" id=4]
[ext_resource path="res://interface/ui_elements/EmblemProgress.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/ui_elements/HealKit.tscn" type="PackedScene" id=6]
[ext_resource path="res://props/details/gems_yellow_1.png" type="Texture" id=7]
[ext_resource path="res://interface/ui_elements/HealPowerBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://pickups/health/pickup_heal_power/pickup_heart_pink.png" type="Texture" id=9]

[node name="OnScreenUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_left = 0.016
anchor_right = 0.98
margin_left = 0.279999
margin_right = 0.399902
margin_bottom = 167.0
mouse_filter = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TopBar"]
margin_top = 54.0
margin_right = 302.0
margin_bottom = 112.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="HealthBar" parent="TopBar/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 302.0
size_flags_horizontal = 2

[node name="HealKit" parent="TopBar/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 58.0
margin_right = 302.0
margin_bottom = 58.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
margin_left = 1622.0
margin_top = 39.0
margin_right = 1851.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="ScoreLabel" type="Label" parent="TopBar/HBoxContainer"]
margin_top = 16.0
margin_right = 124.0
margin_bottom = 72.0
grow_horizontal = 0
text = "0000"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="TopBar/HBoxContainer"]
margin_left = 128.0
margin_right = 229.0
margin_bottom = 89.0
mouse_filter = 2
texture = ExtResource( 7 )

[node name="SelectedSpellIcon" parent="." instance=ExtResource( 2 )]
anchor_left = 0.023
anchor_top = 0.964
anchor_right = 0.023
anchor_bottom = 0.964
margin_top = -140.0
margin_right = 299.0
margin_bottom = 26.0
mouse_filter = 2

[node name="EmblemProgress" parent="." instance=ExtResource( 5 )]
margin_left = 405.0
margin_top = 945.0
margin_right = 469.0
margin_bottom = 1009.0
mouse_filter = 2
size_flags_horizontal = 0

[node name="HealPower" type="VBoxContainer" parent="."]
margin_left = 54.0
margin_top = 312.0
margin_right = 108.0
margin_bottom = 842.0
size_flags_vertical = 3
custom_constants/separation = 18

[node name="HealPowerBar" parent="HealPower" instance=ExtResource( 8 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 54.0
margin_bottom = 467.0

[node name="TextureRect" type="TextureRect" parent="HealPower"]
margin_top = 485.0
margin_right = 54.0
margin_bottom = 530.0
texture = ExtResource( 9 )
